Fix clouds, add darkness to trees in darkmode, gradient to background in light and dark mode

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -13,6 +13,7 @@ html {
 * {
   font-family: "Minecraftia", "VT323";
   box-sizing: border-box;
+  caret-color: transparent;
 }
 
 body::-webkit-scrollbar {
